Fixed embedded and node to work with new api (some more small changes)