@@ -32,11 +32,11 @@ import systems.reformcloud.reformcloud2.executor.api.base.Conditions;
 import systems.reformcloud.reformcloud2.executor.api.command.CommandManager;
 import systems.reformcloud.reformcloud2.executor.api.dependency.DependencyLoader;
 import systems.reformcloud.reformcloud2.executor.api.event.EventManager;
-import systems.reformcloud.reformcloud2.shared.groups.process.DefaultProcessGroup;
-import systems.reformcloud.reformcloud2.node.template.TemplateBackendManager;
+import systems.reformcloud.reformcloud2.executor.api.groups.process.ProcessGroup;
 import systems.reformcloud.reformcloud2.executor.api.http.server.HttpServer;
 import systems.reformcloud.reformcloud2.executor.api.language.TranslationHolder;
-import systems.reformcloud.reformcloud2.executor.api.network.PacketIds;
+import systems.reformcloud.reformcloud2.executor.api.network.address.DefaultNetworkAddress;
+import systems.reformcloud.reformcloud2.executor.api.network.address.NetworkAddress;
 import systems.reformcloud.reformcloud2.executor.api.network.channel.manager.ChannelManager;
 import systems.reformcloud.reformcloud2.executor.api.network.packet.PacketProvider;
 import systems.reformcloud.reformcloud2.executor.api.network.packet.query.QueryManager;
@@ -49,7 +49,6 @@ import systems.reformcloud.reformcloud2.executor.api.provider.NodeInformationPro
 import systems.reformcloud.reformcloud2.executor.api.provider.PlayerProvider;
 import systems.reformcloud.reformcloud2.executor.api.provider.ProcessGroupProvider;
 import systems.reformcloud.reformcloud2.executor.api.registry.service.ServiceRegistry;
-import systems.reformcloud.reformcloud2.shared.network.SimpleNetworkAddress;
 import systems.reformcloud.reformcloud2.node.application.DefaultApplicationLoader;
 import systems.reformcloud.reformcloud2.node.argument.ArgumentParser;
 import systems.reformcloud.reformcloud2.node.cluster.ClusterManager;
@@ -110,6 +109,8 @@ import systems.reformcloud.reformcloud2.node.runnables.OnlinePercentCheckerTask;
 import systems.reformcloud.reformcloud2.node.runnables.ProcessScreenTickRunnable;
 import systems.reformcloud.reformcloud2.node.runnables.ServerWatchdogRunnable;
 import systems.reformcloud.reformcloud2.node.sentry.SentryLoggingLoader;
+import systems.reformcloud.reformcloud2.node.template.TemplateBackendManager;
+import systems.reformcloud.reformcloud2.node.template.VersionInstallerRegistry;
 import systems.reformcloud.reformcloud2.node.tick.CloudTickWorker;
 import systems.reformcloud.reformcloud2.node.tick.TickedTaskScheduler;
 import systems.reformcloud.reformcloud2.protocol.node.ApiToNodeGetIngameMessages;
@@ -126,447 +127,430 @@ import systems.reformcloud.reformcloud2.shared.Constants;
 import systems.reformcloud.reformcloud2.shared.command.DefaultCommandManager;
 import systems.reformcloud.reformcloud2.shared.event.DefaultEventManager;
 import systems.reformcloud.reformcloud2.shared.io.IOUtils;
-import systems.reformcloud.reformcloud2.shared.language.LanguageLoader;
 import systems.reformcloud.reformcloud2.shared.network.channel.DefaultChannelManager;
 import systems.reformcloud.reformcloud2.shared.network.packet.DefaultPacketProvider;
 import systems.reformcloud.reformcloud2.shared.network.packet.DefaultQueryManager;
 import systems.reformcloud.reformcloud2.shared.network.server.DefaultNetworkServer;
+import systems.reformcloud.reformcloud2.shared.network.transport.TransportType;
 import systems.reformcloud.reformcloud2.shared.node.DefaultNodeInformation;
 import systems.reformcloud.reformcloud2.shared.platform.Platform;
+import systems.reformcloud.reformcloud2.shared.random.ThreadLocalFastRandom;
 import systems.reformcloud.reformcloud2.shared.registry.service.DefaultServiceRegistry;
 
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.Random;
 
 public final class NodeExecutor extends ExecutorAPI {
 
-    private static volatile boolean running = true;
+  private static volatile boolean running = true;
 
-    private final DependencyLoader dependencyLoader;
+  private final DependencyLoader dependencyLoader;
 
-    private final HttpServer httpServer = new DefaultHttpServer();
-    private final NetworkServer networkServer = new DefaultNetworkServer();
-    private final NodeNetworkClient networkClient = new NodeNetworkClient();
+  private final HttpServer httpServer = new DefaultHttpServer();
+  private final NetworkServer networkServer = new DefaultNetworkServer();
+  private final NodeNetworkClient networkClient = new NodeNetworkClient();
 
-    private final NodeExecutorConfig nodeExecutorConfig = new NodeExecutorConfig();
-    private final ServiceRegistry serviceRegistry = new DefaultServiceRegistry();
-    private final DefaultNodeProcessProvider processProvider = new DefaultNodeProcessProvider();
-    private final PlayerProvider playerProvider = new DefaultNodePlayerProvider();
-    private final ChannelMessageProvider channelMessageProvider = new DefaultNodeChannelMessageProvider();
-    private final TickedTaskScheduler taskScheduler = new TickedTaskScheduler();
-    private final CloudTickWorker cloudTickWorker = new CloudTickWorker(this.taskScheduler);
+  private final NodeExecutorConfig nodeExecutorConfig = new NodeExecutorConfig();
+  private final ServiceRegistry serviceRegistry = new DefaultServiceRegistry();
+  private final DefaultNodeProcessProvider processProvider = new DefaultNodeProcessProvider();
+  private final PlayerProvider playerProvider = new DefaultNodePlayerProvider();
+  private final ChannelMessageProvider channelMessageProvider = new DefaultNodeChannelMessageProvider();
+  private final TickedTaskScheduler taskScheduler = new TickedTaskScheduler();
+  private final CloudTickWorker cloudTickWorker = new CloudTickWorker(this.taskScheduler);
 
-    private NodeConfig nodeConfig;
-    private DefaultNodeMainGroupProvider mainGroupProvider;
-    private DefaultNodeProcessGroupProvider processGroupProvider;
-    private DefaultNodeNodeInformationProvider nodeInformationProvider;
-    private DefaultNodeConsole console;
-    private CloudLogger logger;
-    private ArgumentParser argumentParser;
+  private NodeConfig nodeConfig;
+  private DefaultNodeMainGroupProvider mainGroupProvider;
+  private DefaultNodeProcessGroupProvider processGroupProvider;
+  private DefaultNodeNodeInformationProvider nodeInformationProvider;
+  private DefaultNodeConsole console;
+  private CloudLogger logger;
+  private ArgumentParser argumentParser;
 
-    private DefaultNodeInformation currentNodeInformation;
+  private DefaultNodeInformation currentNodeInformation;
 
-    protected NodeExecutor(DependencyLoader dependencyLoader) {
-        Conditions.isTrue(Path.of("").toAbsolutePath().toString().indexOf('!') == -1, "Cannot run ReformCloud in directory with ! in path.");
+  protected NodeExecutor(DependencyLoader dependencyLoader) {
+    Conditions.isTrue(Paths.get("").toAbsolutePath().toString().indexOf('!') == -1, "Cannot run ReformCloud in directory with ! in path.");
 
-        ExecutorAPI.setInstance(this);
-        super.type = ExecutorType.NODE;
+    ExecutorAPI.setInstance(this);
+    super.type = ExecutorType.NODE;
 
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-            try {
-                this.shutdown();
-            } catch (final Throwable throwable) {
-                throwable.printStackTrace();
-            }
-        }, "Shutdown-Hook"));
+    Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+      try {
+        this.shutdown();
+      } catch (final Throwable throwable) {
+        throwable.printStackTrace();
+      }
+    }, "Shutdown-Hook"));
 
-        this.dependencyLoader = dependencyLoader;
-        this.registerDefaultServices();
+    this.dependencyLoader = dependencyLoader;
+    this.registerDefaultServices();
+  }
+
+  @NotNull
+  public static NodeExecutor getInstance() {
+    return (NodeExecutor) ExecutorAPI.getInstance();
+  }
+
+  public static boolean isRunning() {
+    return running;
+  }
+
+  protected synchronized void bootstrap(@NotNull ArgumentParser argumentParser) {
+    this.console = new DefaultNodeConsole();
+    this.logger = new CloudLogger(this.console.getLineReader());
+    this.argumentParser = argumentParser;
+
+    PacketRegister.register();
+    this.registerDefaultPacketProcessors();
+
+    this.mainGroupProvider = new DefaultNodeMainGroupProvider(System.getProperty("systems.reformcloud.main-group-dir", "reformcloud/groups/main"));
+    this.processGroupProvider = new DefaultNodeProcessGroupProvider(System.getProperty("systems.reformcloud.sub-group-dir", "reformcloud/groups/sub"));
+
+    this.nodeExecutorConfig.init();
+    this.nodeConfig = this.nodeExecutorConfig.getNodeConfig();
+    SentryLoggingLoader.loadSentryLogging(this); // load after config
+    this.nodeInformationProvider = new DefaultNodeNodeInformationProvider(this.currentNodeInformation = new DefaultNodeInformation(
+      this.nodeConfig.getName(),
+      this.nodeConfig.getUniqueID(),
+      System.currentTimeMillis(),
+      0L,
+      this.nodeConfig.getMaxMemory(),
+      NetworkAddress.fromInetAddress(this.nodeConfig.getStartHost(), 0)
+    ));
+
+    for (String mainGroupName : this.mainGroupProvider.getMainGroupNames()) {
+      System.out.println(TranslationHolder.translateDef("loading-main-group", mainGroupName));
     }
 
-    @NotNull
-    public static NodeExecutor getInstance() {
-        return (NodeExecutor) ExecutorAPI.getInstance();
+    for (String processGroupName : this.processGroupProvider.getProcessGroupNames()) {
+      System.out.println(TranslationHolder.translateDef("loading-process-group", processGroupName));
     }
 
-    public static boolean isRunning() {
-        return running;
+    this.serviceRegistry.setProvider(ClusterManager.class, new DefaultClusterManager(
+      this.nodeInformationProvider,
+      this.processProvider,
+      this.processGroupProvider,
+      this.mainGroupProvider,
+      this.currentNodeInformation
+    ), false, true);
+
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).detectApplications();
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).loadApplications();
+
+    TemplateBackendManager.registerDefaults();
+    VersionInstallerRegistry.registerDefaults();
+
+    this.startNetworkListeners();
+
+    this.taskScheduler.addPermanentTask(new AutoStartRunnable());
+    this.taskScheduler.addPermanentTask(new NodeInformationUpdateRunnable());
+    this.taskScheduler.addPermanentTask(new ServerWatchdogRunnable());
+    this.taskScheduler.addPermanentTask(new ProcessScreenTickRunnable());
+    this.taskScheduler.addPermanentTask(new OnlinePercentCheckerTask());
+
+    this.loadCommands();
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).enableApplications();
+  }
+
+  public synchronized void reload() {
+    System.out.println(TranslationHolder.translate("runtime-try-reload"));
+
+    final long startTime = System.currentTimeMillis();
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).disableApplications();
+
+    this.mainGroupProvider.reload();
+    this.processGroupProvider.reload();
+
+    for (ProcessGroup processGroup : this.processGroupProvider.getProcessGroups()) {
+      for (ProcessInformation information : this.processProvider.getProcessesByProcessGroup(processGroup.getName())) {
+        information.setProcessGroup(processGroup);
+        this.processProvider.updateProcessInformation(information);
+      }
     }
 
-    protected synchronized void bootstrap(@NotNull ArgumentParser argumentParser) {
-        this.console = new DefaultNodeConsole();
-        this.logger = new CloudLogger(this.console.getLineReader());
-        this.argumentParser = argumentParser;
+    this.nodeConfig = this.nodeExecutorConfig.reload();
 
-        PacketRegister.register();
-        this.registerDefaultPacketProcessors();
+    this.currentNodeInformation = new DefaultNodeInformation(
+      this.currentNodeInformation.getName(),
+      this.currentNodeInformation.getUniqueId(),
+      this.currentNodeInformation.getStartupMillis(),
+      this.currentNodeInformation.getUsedMemory(),
+      this.nodeConfig.getMaxMemory(),
+      NetworkAddress.fromInetAddress(this.nodeConfig.getStartHost(), 0)
+    );
 
-        this.mainGroupProvider = new DefaultNodeMainGroupProvider(System.getProperty("systems.reformcloud.main-group-dir", "reformcloud/groups/main"));
-        this.processGroupProvider = new DefaultNodeProcessGroupProvider(System.getProperty("systems.reformcloud.sub-group-dir", "reformcloud/groups/sub"));
+    ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(ClusterManager.class).publishProcessGroupSet(
+      ExecutorAPI.getInstance().getProcessGroupProvider().getProcessGroups()
+    );
+    ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(ClusterManager.class).publishMainGroupSet(
+      ExecutorAPI.getInstance().getMainGroupProvider().getMainGroups()
+    );
 
-        this.nodeExecutorConfig.init();
-        this.nodeConfig = this.nodeExecutorConfig.getNodeConfig();
-        SentryLoggingLoader.loadSentryLogging(this); // load after config
-        this.nodeInformationProvider = new DefaultNodeNodeInformationProvider(this.currentNodeInformation = new DefaultNodeInformation(
-            this.nodeConfig.getName(),
-            this.nodeConfig.getUniqueID(),
-            System.currentTimeMillis(),
-            0L,
-            this.nodeConfig.getMaxMemory()
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).detectApplications();
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).loadApplications();
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).enableApplications();
+
+    System.out.println(TranslationHolder.translateDef("runtime-reload-done", Constants.TWO_POINT_THREE_DECIMAL_FORMAT.format((System.currentTimeMillis() - startTime) / 1000d)));
+  }
+
+  public void shutdown() throws Exception {
+    // prevent duplicate shutdown requests
+    synchronized (this) {
+      if (running) {
+        running = false;
+      } else {
+        return;
+      }
+    }
+
+    System.out.println(TranslationHolder.translate("application-stop"));
+
+    System.out.println(TranslationHolder.translate("application-net-server-close"));
+    this.networkServer.closeAll();
+    this.httpServer.closeAll();
+    System.out.println(TranslationHolder.translate("application-net-client-close"));
+    this.networkClient.closeSync();
+
+    System.out.println(TranslationHolder.translate("application-stop-task-scheduler"));
+    this.taskScheduler.close();
+    this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).disableApplications();
+
+    System.out.println(TranslationHolder.translate("application-stop-processes"));
+    this.processProvider.closeNow(); // important to close the scheduler BEFORE the processes to prevent new processes to start
+    System.out.println(TranslationHolder.translate("application-stop-remove-temp-dir"));
+    IOUtils.deleteDirectorySilently(Paths.get("reformcloud/temp"));
+
+    System.out.println(TranslationHolder.translate("application-stop-finished"));
+
+    this.logger.close();
+    this.console.close();
+
+    if (!Thread.currentThread().getName().equals("Shutdown-Hook")) {
+      // now call all other shutdown hooks
+      System.exit(0);
+    }
+  }
+
+  private void startNetworkListeners() {
+    System.out.println(TranslationHolder.translateDef("network-transport-type-choose", TransportType.BEST_TYPE.getName()));
+
+    for (NetworkAddress networkListener : this.nodeConfig.getNetworkListeners()) {
+      this.networkServer.bind(networkListener.getHost(), networkListener.getPort(), NodeServerChannelListener::new);
+    }
+
+    for (NetworkAddress httpNetworkListener : this.nodeConfig.getHttpNetworkListeners()) {
+      this.httpServer.bind(httpNetworkListener.getHost(), httpNetworkListener.getPort());
+    }
+
+    for (NetworkAddress clusterNode : this.nodeConfig.getClusterNodes()) {
+      if (this.networkClient.connect(
+        clusterNode.getHost(),
+        clusterNode.getPort(),
+        NodeClientChannelListener::new
+      )) {
+        System.out.println(TranslationHolder.translateDef(
+          "network-node-connection-to-other-node-success", clusterNode.getHost(), clusterNode.getPort()
         ));
+      } else {
+        System.out.println(TranslationHolder.translateDef(
+          "network-node-connection-to-other-node-not-successful", clusterNode.getHost(), clusterNode.getPort()
+        ));
+      }
+    }
+  }
 
-        for (String mainGroupName : this.mainGroupProvider.getMainGroupNames()) {
-            System.out.println(TranslationHolder.translate("loading-main-group", mainGroupName));
-        }
+  @NotNull
+  @Override
+  public ChannelMessageProvider getChannelMessageProvider() {
+    return this.channelMessageProvider;
+  }
 
-        for (String processGroupName : this.processGroupProvider.getProcessGroupNames()) {
-            System.out.println(TranslationHolder.translate("loading-process-group", processGroupName));
-        }
+  @NotNull
+  @Override
+  public DatabaseProvider getDatabaseProvider() {
+    return this.serviceRegistry.getProvider(DatabaseProvider.class).orElseThrow(() -> new RuntimeException("Database provider was unregistered"));
+  }
 
-        this.serviceRegistry.setProvider(ClusterManager.class, new DefaultClusterManager(
-            this.nodeInformationProvider,
-            this.processProvider,
-            this.processGroupProvider,
-            this.mainGroupProvider,
-            this.currentNodeInformation
-        ), false, true);
+  @NotNull
+  @Override
+  public MainGroupProvider getMainGroupProvider() {
+    return this.mainGroupProvider;
+  }
 
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).detectApplications();
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).loadApplications();
+  @NotNull
+  @Override
+  public NodeInformationProvider getNodeInformationProvider() {
+    return this.nodeInformationProvider;
+  }
 
-        TemplateBackendManager.registerDefaults();
-        this.startNetworkListeners();
+  @NotNull
+  @Override
+  public PlayerProvider getPlayerProvider() {
+    return this.playerProvider;
+  }
 
-        this.taskScheduler.addPermanentTask(new AutoStartRunnable());
-        this.taskScheduler.addPermanentTask(new NodeInformationUpdateRunnable());
-        this.taskScheduler.addPermanentTask(new ServerWatchdogRunnable());
-        this.taskScheduler.addPermanentTask(new ProcessScreenTickRunnable());
-        this.taskScheduler.addPermanentTask(new OnlinePercentCheckerTask());
+  @NotNull
+  @Override
+  public ProcessGroupProvider getProcessGroupProvider() {
+    return this.processGroupProvider;
+  }
 
-        this.loadCommands();
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).enableApplications();
+  @NotNull
+  @Override
+  public DefaultNodeProcessProvider getProcessProvider() {
+    return this.processProvider;
+  }
+
+  @NotNull
+  @Override
+  public ServiceRegistry getServiceRegistry() {
+    return this.serviceRegistry;
+  }
+
+  @Override
+  public @NotNull DependencyLoader getDependencyLoader() {
+    return this.dependencyLoader;
+  }
+
+  @Override
+  public boolean isReady() {
+    return NodeNetworkClient.CONNECTIONS.isEmpty();
+  }
+
+  @NotNull
+  public TickedTaskScheduler getTaskScheduler() {
+    return this.taskScheduler;
+  }
+
+  @NotNull
+  public CloudTickWorker getCloudTickWorker() {
+    return this.cloudTickWorker;
+  }
+
+  @NotNull
+  public NodeConfig getNodeConfig() {
+    return this.nodeConfig;
+  }
+
+  @NotNull
+  public NodeExecutorConfig getNodeExecutorConfig() {
+    return this.nodeExecutorConfig;
+  }
+
+  @NotNull
+  public DefaultNodeInformation updateCurrentNodeInformation() {
+    this.currentNodeInformation.update();
+    return this.currentNodeInformation;
+  }
+
+  @NotNull
+  public DefaultNodeInformation getCurrentNodeInformation() {
+    return this.currentNodeInformation;
+  }
+
+  @NotNull
+  public ArgumentParser getArgumentParser() {
+    return this.argumentParser;
+  }
+
+  @NotNull
+  public NetworkAddress getAnyAddress() {
+    List<DefaultNetworkAddress> networkListeners = this.nodeConfig.getNetworkListeners();
+    Conditions.isTrue(!networkListeners.isEmpty(), "Try to run cloud system with no network listener configured");
+    return networkListeners.size() == 1 ? networkListeners.get(0) : networkListeners.get(ThreadLocalFastRandom.current().nextInt(networkListeners.size()));
+  }
+
+  @NotNull
+  public String getSelfName() {
+    return this.nodeConfig.getName();
+  }
+
+  @NotNull
+  public DefaultNodeConsole getConsole() {
+    return this.console;
+  }
+
+  @NotNull
+  public DefaultNodeMainGroupProvider getDefaultMainGroupProvider() {
+    return this.mainGroupProvider;
+  }
+
+  @NotNull
+  public DefaultNodeProcessGroupProvider getDefaultProcessGroupProvider() {
+    return this.processGroupProvider;
+  }
+
+  @NotNull
+  public DefaultNodeProcessProvider getDefaultNodeProcessProvider() {
+    return this.processProvider;
+  }
+
+  @NotNull
+  public HttpServer getHttpServer() {
+    return this.httpServer;
+  }
+
+  public boolean isOwnIdentity(@NotNull String name) {
+    return this.nodeConfig.getName().equals(name);
+  }
+
+  private void loadCommands() {
+    this.serviceRegistry.getProviderUnchecked(CommandManager.class)
+      .registerCommand(new CommandProcess(), "Management of local and remote processes", "p", "process", "server", "proxy")
+      .registerCommand(new CommandCluster(), "Management of nodes in the cluster", "clu", "cluster", "c")
+      .registerCommand(new CommandPlayers(), "Management of players on processes", "pl", "players")
+      .registerCommand(new CommandGroup(), "Administration of Main/Sub groups", "g", "group", "groups")
+      .registerCommand(new CommandCreate(), "Creation of sub/main groups", "create")
+      .registerCommand(new CommandLaunch(), "Starting or preparing processes", "launch", "l")
+      .registerCommand(new CommandStop(), "Terminates the program", "stop", "exit", "shutdown")
+      .registerCommand(new CommandLog(), "Uploading log files of running processes", "log")
+      .registerCommand(new CommandReload(), "Reloads the system", "reload", "rl")
+      .registerCommand(new CommandClear(), "Empties the console", "clear", "cls")
+      .registerCommand(new CommandTemplate(), "Manages the templates", "template", "t", "templates")
+      .registerCommand(new CommandHelp(), "Shows an overview of all available commands and their aliases", "help", "ask", "?");
+  }
+
+  public boolean canStartProcesses(int neededMemory) {
+    for (DefaultNodeLocalProcessWrapper processWrapper : this.processProvider.getProcessWrappers()) {
+      if (processWrapper.isStarted()) {
+        neededMemory += processWrapper.getMemory();
+      }
     }
 
-    public synchronized void reload() {
-        System.out.println(TranslationHolder.translate("runtime-try-reload"));
-
-        final long startTime = System.currentTimeMillis();
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).disableApplications();
-
-        this.mainGroupProvider.reload();
-        this.processGroupProvider.reload();
-
-        for (DefaultProcessGroup processGroup : this.processGroupProvider.getProcessGroups()) {
-            for (ProcessInformation information : this.processProvider.getProcessesByProcessGroup(processGroup.getName())) {
-                information.setProcessGroup(processGroup);
-                this.processProvider.updateProcessInformation(information);
-            }
-        }
-
-        LanguageLoader.doReload();
-        this.nodeConfig = this.nodeExecutorConfig.reload();
-
-        this.currentNodeInformation = new DefaultNodeInformation(
-            this.currentNodeInformation.getName(),
-            this.currentNodeInformation.getNodeUniqueID(),
-            this.currentNodeInformation.getStartupTime(),
-            this.currentNodeInformation.getUsedMemory(),
-            this.nodeConfig.getMaxMemory()
-        );
-
-        ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(ClusterManager.class).publishProcessGroupSet(
-            ExecutorAPI.getInstance().getProcessGroupProvider().getProcessGroups()
-        );
-        ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(ClusterManager.class).publishMainGroupSet(
-            ExecutorAPI.getInstance().getMainGroupProvider().getMainGroups()
-        );
-
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).detectApplications();
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).loadApplications();
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).enableApplications();
-
-        System.out.println(TranslationHolder.translate("runtime-reload-done", Constants.TWO_POINT_THREE_DECIMAL_FORMAT.format((System.currentTimeMillis() - startTime) / 1000d)));
+    if (neededMemory >= this.nodeConfig.getMaxMemory()) {
+      return false;
     }
 
-    public void shutdown() throws Exception {
-        // prevent duplicate shutdown requests
-        synchronized (this) {
-            if (running) {
-                running = false;
-            } else {
-                return;
-            }
-        }
+    double cpuUsageSystem = Platform.getOperatingSystemMxBean().getSystemCpuLoad();
+    return cpuUsageSystem <= 0 || cpuUsageSystem * 100 < this.nodeConfig.getMaxSystemCpuUsage();
+  }
 
-        System.out.println(TranslationHolder.translate("application-stop"));
+  private void registerDefaultServices() {
+    this.serviceRegistry.setProvider(CommandManager.class, new DefaultCommandManager(), false, true);
+    this.serviceRegistry.setProvider(ApplicationLoader.class, new DefaultApplicationLoader(), false, true);
+    this.serviceRegistry.setProvider(DatabaseProvider.class, new H2DatabaseProvider(), false, true);
+    this.serviceRegistry.setProvider(EventManager.class, new DefaultEventManager(), false, true);
+    this.serviceRegistry.setProvider(ChannelManager.class, new DefaultChannelManager(), false, true);
+    this.serviceRegistry.setProvider(PacketProvider.class, new DefaultPacketProvider(), false, true);
+    this.serviceRegistry.setProvider(QueryManager.class, new DefaultQueryManager(), false, true);
+    this.serviceRegistry.setProvider(ProcessFactoryController.class, new DefaultProcessFactoryController(this.processProvider), false, true);
+    this.serviceRegistry.setProvider(ProcessScreenController.class, new DefaultProcessScreenController(), false, true);
+  }
 
-        System.out.println(TranslationHolder.translate("application-net-server-close"));
-        this.networkServer.closeAll();
-        this.httpServer.closeAll();
-        System.out.println(TranslationHolder.translate("application-net-client-close"));
-        this.networkClient.disconnect();
-
-        System.out.println(TranslationHolder.translate("application-stop-task-scheduler"));
-        this.taskScheduler.close();
-        this.serviceRegistry.getProviderUnchecked(ApplicationLoader.class).disableApplications();
-
-        System.out.println(TranslationHolder.translate("application-stop-processes"));
-        this.processProvider.closeNow(); // important to close the scheduler BEFORE the processes to prevent new processes to start
-        System.out.println(TranslationHolder.translate("application-stop-remove-temp-dir"));
-        IOUtils.deleteDirectorySilently(Path.of("reformcloud/temp"));
-
-        System.out.println(TranslationHolder.translate("application-stop-finished"));
-
-        this.logger.close();
-        this.console.close();
-
-        if (!Thread.currentThread().getName().equals("Shutdown-Hook")) {
-            // now call all other shutdown hooks
-            System.exit(0);
-        }
-    }
-
-    private void startNetworkListeners() {
-        System.out.println(TranslationHolder.get("network-transport-type-choose", PacketIds.TRANSPORT_TYPE.getName()));
-
-        for (SimpleNetworkAddress networkListener : this.nodeConfig.getNetworkListeners()) {
-            if (networkListener.getHost() == null || networkListener.getPort() < 0) {
-                System.err.println(TranslationHolder.translate(
-                    "startup-bind-net-listener-fail", networkListener.getHost(), networkListener.getPort()
-                ));
-                continue;
-            }
-
-            this.networkServer.bind(networkListener.getHost(), networkListener.getPort(), NodeServerChannelListener::new);
-        }
-
-        for (SimpleNetworkAddress httpNetworkListener : this.nodeConfig.getHttpNetworkListeners()) {
-            if (httpNetworkListener.getHost() == null || httpNetworkListener.getPort() < 0) {
-                System.err.println(TranslationHolder.translate(
-                    "startup-bind-net-listener-fail", httpNetworkListener.getHost(), httpNetworkListener.getPort()
-                ));
-                continue;
-            }
-
-            this.httpServer.bind(httpNetworkListener.getHost(), httpNetworkListener.getPort());
-        }
-
-        for (SimpleNetworkAddress clusterNode : this.nodeConfig.getClusterNodes()) {
-            if (clusterNode.getHost() == null || clusterNode.getPort() < 0) {
-                System.err.println(TranslationHolder.translate(
-                    "startup-connect-node-fail", clusterNode.getHost(), clusterNode.getPort()
-                ));
-                continue;
-            }
-
-            if (this.networkClient.connect(
-                clusterNode.getHost(),
-                clusterNode.getPort(),
-                NodeClientChannelListener::new
-            )) {
-                System.out.println(TranslationHolder.translate(
-                    "network-node-connection-to-other-node-success", clusterNode.getHost(), clusterNode.getPort()
-                ));
-            } else {
-                System.out.println(TranslationHolder.translate(
-                    "network-node-connection-to-other-node-not-successful", clusterNode.getHost(), clusterNode.getPort()
-                ));
-            }
-        }
-    }
-
-    @NotNull
-    @Override
-    public ChannelMessageProvider getChannelMessageProvider() {
-        return this.channelMessageProvider;
-    }
-
-    @NotNull
-    @Override
-    public DatabaseProvider getDatabaseProvider() {
-        return this.serviceRegistry.getProvider(DatabaseProvider.class).orElseThrow(() -> new RuntimeException("Database provider was unregistered"));
-    }
-
-    @NotNull
-    @Override
-    public MainGroupProvider getMainGroupProvider() {
-        return this.mainGroupProvider;
-    }
-
-    @NotNull
-    @Override
-    public NodeInformationProvider getNodeInformationProvider() {
-        return this.nodeInformationProvider;
-    }
-
-    @NotNull
-    @Override
-    public PlayerProvider getPlayerProvider() {
-        return this.playerProvider;
-    }
-
-    @NotNull
-    @Override
-    public ProcessGroupProvider getProcessGroupProvider() {
-        return this.processGroupProvider;
-    }
-
-    @NotNull
-    @Override
-    public DefaultNodeProcessProvider getProcessProvider() {
-        return this.processProvider;
-    }
-
-    @NotNull
-    @Override
-    public ServiceRegistry getServiceRegistry() {
-        return this.serviceRegistry;
-    }
-
-    @Override
-    public @NotNull DependencyLoader getDependencyLoader() {
-        return this.dependencyLoader;
-    }
-
-    @Override
-    public boolean isReady() {
-        return NodeNetworkClient.CONNECTIONS.isEmpty();
-    }
-
-    @NotNull
-    public TickedTaskScheduler getTaskScheduler() {
-        return this.taskScheduler;
-    }
-
-    @NotNull
-    public CloudTickWorker getCloudTickWorker() {
-        return this.cloudTickWorker;
-    }
-
-    @NotNull
-    public NodeConfig getNodeConfig() {
-        return this.nodeConfig;
-    }
-
-    @NotNull
-    public NodeExecutorConfig getNodeExecutorConfig() {
-        return this.nodeExecutorConfig;
-    }
-
-    @NotNull
-    public DefaultNodeInformation updateCurrentNodeInformation() {
-        this.currentNodeInformation.update();
-        return this.currentNodeInformation;
-    }
-
-    @NotNull
-    public DefaultNodeInformation getCurrentNodeInformation() {
-        return this.currentNodeInformation;
-    }
-
-    @NotNull
-    public ArgumentParser getArgumentParser() {
-        return this.argumentParser;
-    }
-
-    @NotNull
-    public SimpleNetworkAddress getAnyAddress() {
-        List<SimpleNetworkAddress> networkListeners = this.nodeConfig.getNetworkListeners();
-        Conditions.isTrue(!networkListeners.isEmpty(), "Try to run cloud system with no network listener configured");
-        return networkListeners.size() == 1 ? networkListeners.get(0) : networkListeners.get(new Random().nextInt(networkListeners.size()));
-    }
-
-    @NotNull
-    public String getSelfName() {
-        return this.nodeConfig.getName();
-    }
-
-    @NotNull
-    public DefaultNodeConsole getConsole() {
-        return this.console;
-    }
-
-    @NotNull
-    public DefaultNodeMainGroupProvider getDefaultMainGroupProvider() {
-        return this.mainGroupProvider;
-    }
-
-    @NotNull
-    public DefaultNodeProcessGroupProvider getDefaultProcessGroupProvider() {
-        return this.processGroupProvider;
-    }
-
-    @NotNull
-    public DefaultNodeProcessProvider getDefaultNodeProcessProvider() {
-        return this.processProvider;
-    }
-
-    @NotNull
-    public HttpServer getHttpServer() {
-        return this.httpServer;
-    }
-
-    public boolean isOwnIdentity(@NotNull String name) {
-        return this.nodeConfig.getName().equals(name);
-    }
-
-    private void loadCommands() {
-        this.serviceRegistry.getProviderUnchecked(CommandManager.class)
-            .registerCommand(new CommandProcess(), "Management of local and remote processes", "p", "process", "server", "proxy")
-            .registerCommand(new CommandCluster(), "Management of nodes in the cluster", "clu", "cluster", "c")
-            .registerCommand(new CommandPlayers(), "Management of players on processes", "pl", "players")
-            .registerCommand(new CommandGroup(), "Administration of Main/Sub groups", "g", "group", "groups")
-            .registerCommand(new CommandCreate(), "Creation of sub/main groups", "create")
-            .registerCommand(new CommandLaunch(), "Starting or preparing processes", "launch", "l")
-            .registerCommand(new CommandStop(), "Terminates the program", "stop", "exit", "shutdown")
-            .registerCommand(new CommandLog(), "Uploading log files of running processes", "log")
-            .registerCommand(new CommandReload(), "Reloads the system", "reload", "rl")
-            .registerCommand(new CommandClear(), "Empties the console", "clear", "cls")
-            .registerCommand(new CommandTemplate(), "Manages the templates", "template", "t", "templates")
-            .registerCommand(new CommandHelp(), "Shows an overview of all available commands and their aliases", "help", "ask", "?");
-    }
-
-    public boolean canStartProcesses(int neededMemory) {
-        for (DefaultNodeLocalProcessWrapper processWrapper : this.processProvider.getProcessWrappers()) {
-            if (processWrapper.isStarted()) {
-                neededMemory += processWrapper.getProcessInformation().getProcessDetail().getMaxMemory();
-            }
-        }
-
-        if (neededMemory >= this.nodeConfig.getMaxMemory()) {
-            return false;
-        }
-
-        double cpuUsageSystem = Platform.getOperatingSystemMxBean().getSystemCpuLoad();
-        return cpuUsageSystem <= 0 || cpuUsageSystem * 100 < this.nodeConfig.getMaxSystemCpuUsage();
-    }
-
-    private void registerDefaultServices() {
-        this.serviceRegistry.setProvider(CommandManager.class, new DefaultCommandManager(), false, true);
-        this.serviceRegistry.setProvider(ApplicationLoader.class, new DefaultApplicationLoader(), false, true);
-        this.serviceRegistry.setProvider(DatabaseProvider.class, new H2DatabaseProvider(), false, true);
-        this.serviceRegistry.setProvider(EventManager.class, new DefaultEventManager(), false, true);
-        this.serviceRegistry.setProvider(ChannelManager.class, new DefaultChannelManager(), false, true);
-        this.serviceRegistry.setProvider(PacketProvider.class, new DefaultPacketProvider(), false, true);
-        this.serviceRegistry.setProvider(QueryManager.class, new DefaultQueryManager(), false, true);
-        this.serviceRegistry.setProvider(ProcessFactoryController.class, new DefaultProcessFactoryController(this.processProvider), false, true);
-        this.serviceRegistry.setProvider(ProcessScreenController.class, new DefaultProcessScreenController(), false, true);
-    }
-
-    private void registerDefaultPacketProcessors() {
-        PacketProcessorManager.getInstance()
-            .registerProcessor(new PacketConnectPlayerToServerProcessor(), PacketConnectPlayerToServer.class)
-            .registerProcessor(new PacketDisconnectPlayerProcessor(), PacketDisconnectPlayer.class)
-            .registerProcessor(new PacketPlayEffectToPlayerProcessor(), PacketPlayEffectToPlayer.class)
-            .registerProcessor(new PacketPlaySoundToPlayerProcessor(), PacketPlaySoundToPlayer.class)
-            .registerProcessor(new PacketSendPlayerMessageProcessor(), PacketSendPlayerMessage.class)
-            .registerProcessor(new PacketSendPlayerTitleProcessor(), PacketSendPlayerTitle.class)
-            .registerProcessor(new PacketSetPlayerLocationProcessor(), PacketSetPlayerLocation.class)
-            .registerProcessor(new ApiToNodeGetIngameMessagesProcessor(), ApiToNodeGetIngameMessages.class)
-            .registerProcessor(new ChannelMessageProcessor(), PacketChannelMessage.class)
-            .registerProcessor(new NodeToNodeProcessCommandProcessor(), NodeToNodeProcessCommand.class)
-            .registerProcessor(new NodeToNodePublishChannelMessageProcessor(), NodeToNodePublishChannelMessage.class)
-            .registerProcessor(new NodeToNodeRequestNodeInformationUpdateProcessor(), NodeToNodeRequestNodeInformationUpdate.class)
-            .registerProcessor(new NodeToNodeTabCompleteCommandProcessor(), NodeToNodeTabCompleteCommand.class);
-    }
+  private void registerDefaultPacketProcessors() {
+    PacketProcessorManager.getInstance()
+      .registerProcessor(new PacketConnectPlayerToServerProcessor(), PacketConnectPlayerToServer.class)
+      .registerProcessor(new PacketDisconnectPlayerProcessor(), PacketDisconnectPlayer.class)
+      .registerProcessor(new PacketPlayEffectToPlayerProcessor(), PacketPlayEffectToPlayer.class)
+      .registerProcessor(new PacketPlaySoundToPlayerProcessor(), PacketPlaySoundToPlayer.class)
+      .registerProcessor(new PacketSendPlayerMessageProcessor(), PacketSendPlayerMessage.class)
+      .registerProcessor(new PacketSendPlayerTitleProcessor(), PacketSendPlayerTitle.class)
+      .registerProcessor(new PacketSetPlayerLocationProcessor(), PacketSetPlayerLocation.class)
+      .registerProcessor(new ApiToNodeGetIngameMessagesProcessor(), ApiToNodeGetIngameMessages.class)
+      .registerProcessor(new ChannelMessageProcessor(), PacketChannelMessage.class)
+      .registerProcessor(new NodeToNodeProcessCommandProcessor(), NodeToNodeProcessCommand.class)
+      .registerProcessor(new NodeToNodePublishChannelMessageProcessor(), NodeToNodePublishChannelMessage.class)
+      .registerProcessor(new NodeToNodeRequestNodeInformationUpdateProcessor(), NodeToNodeRequestNodeInformationUpdate.class)
+      .registerProcessor(new NodeToNodeTabCompleteCommandProcessor(), NodeToNodeTabCompleteCommand.class);
+  }
 }
