@@ -32,37 +32,36 @@ import systems.reformcloud.reformcloud2.shared.Constants;
 import systems.reformcloud.reformcloud2.shared.dependency.DefaultDependencyLoader;
 import systems.reformcloud.reformcloud2.shared.dependency.DependencyFileLoader;
 import systems.reformcloud.reformcloud2.shared.io.IOUtils;
-import systems.reformcloud.reformcloud2.shared.language.LanguageLoader;
+
+import java.nio.file.Paths;
 
 public final class NodeLauncher {
 
-    public static synchronized void main(String[] args) {
-        // load all needed dependencies before proceeding
-        DependencyLoader dependencyLoader = new DefaultDependencyLoader();
-        dependencyLoader.load(DependencyFileLoader.collectDependenciesFromFile(NodeLauncher.class.getClassLoader().getResourceAsStream("internal/dependencies.txt")));
+  public static synchronized void main(String[] args) {
+    // load all needed dependencies before proceeding
+    DependencyLoader dependencyLoader = new DefaultDependencyLoader();
+    dependencyLoader.load(DependencyFileLoader.collectDependenciesFromFile(NodeLauncher.class.getClassLoader().getResourceAsStream("internal/dependencies.txt")));
 
-        // Make a clear space here to show the user that we now start the cloud itself (and because it looks better)
-        System.out.println();
-        System.out.println("Loaded all dependencies successfully - starting...");
-        System.out.println();
+    // Make a clear space here to show the user that we now start the cloud itself (and because it looks better)
+    System.out.println();
+    System.out.println("Loaded all dependencies successfully - starting...");
+    System.out.println();
 
-        LanguageLoader.doLoad();
+    final long startTime = System.currentTimeMillis();
 
-        final long startTime = System.currentTimeMillis();
+    IOUtils.recreateDirectory(Paths.get("reformcloud/temp"));
+    NodeExecutor nodeExecutor = new NodeExecutor(dependencyLoader);
 
-        IOUtils.recreateDirectory(Path.of("reformcloud/temp"));
-        NodeExecutor nodeExecutor = new NodeExecutor(dependencyLoader);
-
-        ArgumentParser argumentParser = new DefaultArgumentParser(args);
-        if (argumentParser.getBoolean("refresh-versions")) {
-            IOUtils.deleteAllFilesInDirectory(Path.of("reformcloud/files"));
-        }
-
-        nodeExecutor.bootstrap(argumentParser);
-
-        double bootTime = (System.currentTimeMillis() - startTime) / 1000d;
-        System.out.println(TranslationHolder.translate("startup-done", Constants.TWO_POINT_THREE_DECIMAL_FORMAT.format(bootTime)));
-
-        nodeExecutor.getCloudTickWorker().startTick();
+    ArgumentParser argumentParser = new DefaultArgumentParser(args);
+    if (argumentParser.getBoolean("refresh-versions")) {
+      IOUtils.deleteAllFilesInDirectory(Paths.get("reformcloud/files"));
     }
+
+    nodeExecutor.bootstrap(argumentParser);
+
+    double bootTime = (System.currentTimeMillis() - startTime) / 1000d;
+    System.out.println(TranslationHolder.translateDef("startup-done", Constants.TWO_POINT_THREE_DECIMAL_FORMAT.format(bootTime)));
+
+    nodeExecutor.getCloudTickWorker().startTick();
+  }
 }
