@@ -28,23 +28,22 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.UnmodifiableView;
 import systems.reformcloud.reformcloud2.executor.api.ExecutorAPI;
-import systems.reformcloud.reformcloud2.executor.api.application.ApplicationConfig;
+import systems.reformcloud.reformcloud2.executor.api.application.AppClassLoader;
+import systems.reformcloud.reformcloud2.executor.api.application.Application;
 import systems.reformcloud.reformcloud2.executor.api.application.ApplicationLoader;
 import systems.reformcloud.reformcloud2.executor.api.application.ApplicationStatus;
 import systems.reformcloud.reformcloud2.executor.api.application.LoadedApplication;
-import systems.reformcloud.reformcloud2.executor.api.application.api.Application;
-import systems.reformcloud.reformcloud2.executor.api.application.builder.ApplicationConfigBuilder;
-import systems.reformcloud.reformcloud2.executor.api.application.loader.AppClassLoader;
+import systems.reformcloud.reformcloud2.executor.api.application.config.ApplicationConfig;
 import systems.reformcloud.reformcloud2.executor.api.application.updater.ApplicationUpdateRepository;
 import systems.reformcloud.reformcloud2.executor.api.configuration.JsonConfiguration;
 import systems.reformcloud.reformcloud2.executor.api.event.EventManager;
-import systems.reformcloud.reformcloud2.shared.io.DownloadHelper;
-import systems.reformcloud.reformcloud2.shared.io.IOUtils;
 import systems.reformcloud.reformcloud2.executor.api.language.TranslationHolder;
-import systems.reformcloud.reformcloud2.executor.api.utility.list.Streams;
+import systems.reformcloud.reformcloud2.executor.api.utility.MoreCollections;
 import systems.reformcloud.reformcloud2.node.event.application.ApplicationDisableEvent;
 import systems.reformcloud.reformcloud2.node.event.application.ApplicationLoadEvent;
 import systems.reformcloud.reformcloud2.node.event.application.ApplicationLoaderDetectedApplicationEvent;
+import systems.reformcloud.reformcloud2.shared.io.DownloadHelper;
+import systems.reformcloud.reformcloud2.shared.io.IOUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -53,8 +52,8 @@ import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
@@ -65,246 +64,247 @@ import java.util.stream.Collectors;
 
 public final class DefaultApplicationLoader implements ApplicationLoader {
 
-    private static final Path APPLICATION_DIRECTORY = Path.of(System.getProperty("systems.reformcloud.application-directory", "reformcloud/applications"));
+  private static final Path APPLICATION_DIRECTORY = Paths.get(System.getProperty("systems.reformcloud.application-directory", "reformcloud/applications"));
 
-    private final Map<String, Application> loadedApplications = new ConcurrentHashMap<>();
-    private final Collection<ApplicationConfig> toLoad = new CopyOnWriteArrayList<>();
+  private final Map<String, Application> loadedApplications = new ConcurrentHashMap<>();
+  private final Collection<ApplicationConfig> detectedApplications = new CopyOnWriteArrayList<>();
 
-    @Override
-    public void detectApplications() {
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(APPLICATION_DIRECTORY, path -> path.toString().endsWith(".jar"))) {
-            for (Path path : stream) {
-                if (this.loadedApplications.values().stream().anyMatch(e -> e.getApplication().getApplicationConfig().getApplicationFile().toPath().toString().equals(path.toString()))) {
-                    continue;
-                }
-
-                this.detectApplication(path);
-            }
-        } catch (final IOException exception) {
-            exception.printStackTrace();
+  @Override
+  public void detectApplications() {
+    try (DirectoryStream<Path> stream = Files.newDirectoryStream(APPLICATION_DIRECTORY, path -> path.toString().endsWith(".jar"))) {
+      for (Path path : stream) {
+        if (this.loadedApplications.values().stream().anyMatch(e -> e.getApplication().getApplicationConfig().getApplicationPath().toString().equals(path.toString()))) {
+          continue;
         }
 
-        System.out.println(TranslationHolder.translate("application-loaded-amount", this.toLoad.size()));
+        this.detectApplication(path);
+      }
+    } catch (final IOException exception) {
+      exception.printStackTrace();
     }
 
-    @Override
-    public void loadApplications() {
-        this.toLoad.forEach(this::installApplication);
-        this.toLoad.clear();
+    System.out.println(TranslationHolder.translate("application-loaded-amount", this.detectedApplications.size()));
+  }
 
-        for (Application value : this.loadedApplications.values()) {
-            ApplicationLoadEvent event = new ApplicationLoadEvent(value.getApplication());
-            ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(EventManager.class).callEvent(event);
-            if (event.isCancelled()) {
-                continue;
-            }
+  @Override
+  public void loadApplications() {
+    this.detectedApplications.forEach(this::installApplication);
+    this.detectedApplications.clear();
 
-            value.onLoad();
-            value.getApplication().setApplicationStatus(ApplicationStatus.LOADED);
-            System.out.println(TranslationHolder.translate("successfully-loaded-app", value.getApplication().getName()));
-        }
+    for (Application value : this.loadedApplications.values()) {
+      ApplicationLoadEvent event = new ApplicationLoadEvent(value.getApplication());
+      ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(EventManager.class).callEvent(event);
+      if (event.isCancelled()) {
+        continue;
+      }
+
+      value.onLoad();
+      value.getApplication().setApplicationStatus(ApplicationStatus.LOADED);
+      System.out.println(TranslationHolder.translateDef("successfully-loaded-app", value.getApplication().getName()));
     }
+  }
 
-    @Override
-    public void enableApplications() {
-        for (Application value : this.loadedApplications.values()) {
-            value.onEnable();
-            value.getApplication().setApplicationStatus(ApplicationStatus.ENABLED);
-            System.out.println(TranslationHolder.translate("successfully-enabled-app", value.getApplication().getName()));
-        }
+  @Override
+  public void enableApplications() {
+    for (Application value : this.loadedApplications.values()) {
+      value.onEnable();
+      value.getApplication().setApplicationStatus(ApplicationStatus.ENABLED);
+      System.out.println(TranslationHolder.translateDef("successfully-enabled-app", value.getApplication().getName()));
     }
+  }
 
-    @Override
-    public void disableApplications() {
-        this.loadedApplications.values().forEach(this::disableApplication);
-    }
+  @Override
+  public void disableApplications() {
+    this.loadedApplications.values().forEach(this::disableApplication);
+  }
 
-    @Override
-    public void fetchAllUpdates() {
-        this.loadedApplications.values().forEach(this::handleUpdate);
-    }
+  @Override
+  public void fetchAllUpdates() {
+    this.loadedApplications.values().forEach(this::handleUpdate);
+  }
 
-    @Override
-    public void fetchUpdates(@NotNull String application) {
-        Streams.findFirst(this.loadedApplications.values(), e -> e.getApplication().getName().equals(application)).ifPresent(this::handleUpdate);
-    }
+  @Override
+  public void fetchUpdates(@NotNull String application) {
+    MoreCollections.findFirst(this.loadedApplications.values(), e -> e.getApplication().getName().equals(application)).ifPresent(this::handleUpdate);
+  }
 
-    @Override
-    public boolean doSpecificApplicationInstall(@NotNull Path path) {
-        if (Files.exists(path)) {
-            ApplicationConfig config = this.detectApplication(path);
-            if (config == null) {
-                return false;
-            }
-
-            Application app = this.installApplication(config);
-            if (app != null) {
-                app.onLoad();
-                app.onEnable();
-                app.getApplication().setApplicationStatus(ApplicationStatus.ENABLED);
-            }
-
-            return app != null;
-        }
-
+  @Override
+  public boolean doSpecificApplicationInstall(@NotNull Path path) {
+    if (Files.exists(path)) {
+      ApplicationConfig config = this.detectApplication(path);
+      if (config == null) {
         return false;
+      }
+
+      Application app = this.installApplication(config);
+      if (app != null) {
+        app.onLoad();
+        app.onEnable();
+        app.getApplication().setApplicationStatus(ApplicationStatus.ENABLED);
+      }
+
+      return app != null;
     }
 
-    @Override
-    public boolean doSpecificApplicationUninstall(@NotNull LoadedApplication loadedApplication) {
-        return Streams.findFirst(
-            this.loadedApplications.values(),
-            e -> e.getApplication().getName().equals(loadedApplication.getName())
-        ).ifPresent(this::disableApplication).isPresent();
-    }
+    return false;
+  }
 
-    @NotNull
-    @Override
-    public Optional<LoadedApplication> getApplication(@NotNull String name) {
-        return Optional.ofNullable(this.loadedApplications.get(name)).map(Application::getApplication);
-    }
+  @Override
+  public boolean doSpecificApplicationUninstall(@NotNull LoadedApplication loadedApplication) {
+    final Optional<Application> application = MoreCollections.findFirst(
+      this.loadedApplications.values(),
+      e -> e.getApplication().getName().equals(loadedApplication.getName())
+    );
+    application.ifPresent(this::disableApplication);
+    return application.isPresent();
+  }
 
-    @NotNull
-    @Override
-    public @UnmodifiableView Collection<LoadedApplication> getApplications() {
-        return Collections.unmodifiableCollection(this.loadedApplications.values().stream().map(Application::getApplication).collect(Collectors.toList()));
-    }
+  @NotNull
+  @Override
+  public Optional<LoadedApplication> getApplication(@NotNull String name) {
+    return Optional.ofNullable(this.loadedApplications.get(name)).map(Application::getApplication);
+  }
 
-    @Override
-    public @NotNull Path getApplicationFolder() {
-        return APPLICATION_DIRECTORY;
-    }
+  @NotNull
+  @Override
+  public @UnmodifiableView Collection<LoadedApplication> getApplications() {
+    return this.loadedApplications.values().stream().map(Application::getApplication).collect(Collectors.toList());
+  }
 
-    @Nullable
-    private ApplicationConfig detectApplication(@NotNull Path path) {
-        try (JarFile jarFile = new JarFile(path.toFile())) {
-            JarEntry applicationConfigEntry = jarFile.getJarEntry("application.json");
-            if (applicationConfigEntry == null) {
-                applicationConfigEntry = jarFile.getJarEntry("app.json");
+  @Override
+  public @NotNull Path getApplicationFolder() {
+    return APPLICATION_DIRECTORY;
+  }
 
-                if (applicationConfigEntry == null) {
-                    System.err.println("An application has to contain a application.json or app.json @ " + path.toString());
-                    return null;
-                }
-            }
+  @Nullable
+  private ApplicationConfig detectApplication(@NotNull Path path) {
+    try (JarFile jarFile = new JarFile(path.toFile())) {
+      JarEntry applicationConfigEntry = jarFile.getJarEntry("application.json");
+      if (applicationConfigEntry == null) {
+        applicationConfigEntry = jarFile.getJarEntry("app.json");
 
-            try (InputStream inputStream = jarFile.getInputStream(applicationConfigEntry)) {
-                JsonConfiguration jsonConfiguration = new JsonConfiguration(inputStream);
+        if (applicationConfigEntry == null) {
+          System.err.println("An application has to contain a application.json or app.json @ " + path.toString());
+          return null;
+        }
+      }
 
-                ApplicationConfig applicationConfig = new ApplicationConfigBuilder(
-                    jsonConfiguration.getString("name"),
-                    jsonConfiguration.getString("main"),
-                    jsonConfiguration.getString("author"),
-                    jsonConfiguration.getString("version"),
-                    path.toFile(),
-                    applicationConfigEntry
-                )
-                    .withDescription(jsonConfiguration.getOrDefault("description", (String) null))
-                    .withWebsite(jsonConfiguration.getOrDefault("website", (String) null))
-                    .withImplementedVersion(jsonConfiguration.getOrDefault("impl-version", (String) null))
-                    .create();
+      try (InputStream inputStream = jarFile.getInputStream(applicationConfigEntry)) {
+        JsonConfiguration jsonConfiguration = JsonConfiguration.newJsonConfiguration(inputStream);
 
-                if (this.getApplication(applicationConfig.getName()).isPresent()) {
-                    System.err.println("Detected duplicate application " + applicationConfig.getName() + " @ " + path.toString());
-                    return null;
-                }
+        ApplicationConfig config = ApplicationConfig.builder()
+          .name(jsonConfiguration.getString("name"))
+          .main(jsonConfiguration.getString("main"))
+          .author(jsonConfiguration.getString("author"))
+          .version(jsonConfiguration.getString("version"))
+          .appFile(path)
+          .descFile(applicationConfigEntry)
+          .description(jsonConfiguration.getOrDefault("description", (String) null))
+          .website(jsonConfiguration.getOrDefault("website", (String) null))
+          .implementedVersion(jsonConfiguration.getOrDefault("impl-version", (String) null))
+          .build();
 
-                ApplicationLoaderDetectedApplicationEvent event = new ApplicationLoaderDetectedApplicationEvent(applicationConfig);
-                ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(EventManager.class).callEvent(event);
-                if (event.isCancelled()) {
-                    return null;
-                }
-
-                this.toLoad.add(applicationConfig);
-                System.out.println(TranslationHolder.translate("application-detected", applicationConfig.getName(), path.toString()));
-                return applicationConfig;
-            }
-        } catch (final IOException exception) {
-            exception.printStackTrace();
+        if (this.getApplication(config.getName()).isPresent()) {
+          System.err.println("Detected duplicate application " + config.getName() + " @ " + path.toString());
+          return null;
         }
 
-        return null;
-    }
-
-    @Nullable
-    private Application installApplication(@NotNull ApplicationConfig applicationConfig) {
-        try {
-            AppClassLoader loader = new AppClassLoader(new URL[]{applicationConfig.getApplicationFile().toURI().toURL()}, Thread.currentThread().getContextClassLoader());
-            Class<?> mainClass = loader.loadClass(applicationConfig.getMainClassName());
-
-            // Load the dependencies which are needed for the application to work
-            ExecutorAPI.getInstance().getDependencyLoader().detectAndLoad(mainClass);
-
-            Application instance = (Application) mainClass.getDeclaredConstructor().newInstance();
-            System.out.println(TranslationHolder.translate("successfully-pre-installed-app", applicationConfig.getName(), applicationConfig.getAuthor()));
-
-            instance.init(new DefaultLoadedApplication(this, applicationConfig, mainClass), loader);
-            if (instance.getUpdateRepository() != null) {
-                instance.getUpdateRepository().fetchOrigin();
-            }
-
-            this.loadedApplications.put(applicationConfig.getName(), instance);
-            System.out.println(TranslationHolder.translate("successfully-installed-app", applicationConfig.getName()));
-            return instance;
-        } catch (final ClassNotFoundException exception) {
-            System.err.println("Unable to find main class " + applicationConfig.getMainClassName() + " for application " + applicationConfig.getName());
-        } catch (final NoSuchMethodException exception) {
-            System.err.println("Unable to find NoArgsConstructor in class " + applicationConfig.getMainClassName() + " in application " + applicationConfig.getName());
-        } catch (final IOException | IllegalAccessException | InstantiationException | InvocationTargetException exception) {
-            exception.printStackTrace();
-        }
-
-        return null;
-    }
-
-    private void disableApplication(@NotNull Application application) {
-        ApplicationDisableEvent event = new ApplicationDisableEvent(application.getApplication());
+        ApplicationLoaderDetectedApplicationEvent event = new ApplicationLoaderDetectedApplicationEvent(config);
         ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(EventManager.class).callEvent(event);
         if (event.isCancelled()) {
-            return;
+          return null;
         }
 
-        application.getApplication().setApplicationStatus(ApplicationStatus.PRE_DISABLE);
-        application.onPreDisable();
-        System.out.println(TranslationHolder.translate("successfully-pre-disabled-app", application.getApplication().getName()));
-
-        application.getApplication().setApplicationStatus(ApplicationStatus.DISABLED);
-        application.onDisable();
-
-        this.handleUpdate(application);
-
-        this.loadedApplications.remove(application.getApplication().getName());
-        application.getAppClassLoader().close();
+        this.detectedApplications.add(config);
+        System.out.println(TranslationHolder.translateDef("application-detected", config.getName(), path.toString()));
+        return config;
+      }
+    } catch (final IOException exception) {
+      exception.printStackTrace();
     }
 
-    private void handleUpdate(@NotNull Application application) {
-        // Do not fetch updates on development builds
-        if (System.getProperty("reformcloud.runner.specification").equals("SNAPSHOT")) {
-            return;
-        }
+    return null;
+  }
 
-        ApplicationUpdateRepository repository = application.getUpdateRepository();
-        if (repository == null || !repository.isNewVersionAvailable() || repository.getUpdate() == null) {
-            return;
-        }
+  @Nullable
+  private Application installApplication(@NotNull ApplicationConfig applicationConfig) {
+    try {
+      AppClassLoader loader = new AppClassLoader(new URL[]{applicationConfig.getApplicationPath().toUri().toURL()}, Thread.currentThread().getContextClassLoader());
+      Class<?> mainClass = loader.loadClass(applicationConfig.getMainClassName());
 
-        IOUtils.createDirectory(Path.of("reformcloud/.update/apps"));
-        String fileName = application.getApplication().getApplicationConfig().getApplicationFile().getName();
-        String[] split = fileName.split("-");
-        String name = fileName.replace("-" + split[split.length - 1], "").replace(".jar", "");
+      // Load the dependencies which are needed for the application to work
+      ExecutorAPI.getInstance().getDependencyLoader().detectAndLoad(mainClass);
 
-        System.out.println(TranslationHolder.translate(
-            "application-download-update",
-            application.getApplication().getApplicationConfig().getName(),
-            application.getApplication().getApplicationConfig().getVersion(),
-            repository.getUpdate().getNewVersion(),
-            repository.getName(),
-            repository.getUpdate().getDownloadUrl()
-        ));
+      Application instance = (Application) mainClass.getDeclaredConstructor().newInstance();
+      System.out.println(TranslationHolder.translateDef("successfully-pre-installed-app", applicationConfig.getName(), applicationConfig.getAuthor()));
 
-        DownloadHelper.download(
-            repository.getUpdate().getDownloadUrl(),
-            "reformcloud/.update/apps/" + name + "-" + repository.getUpdate().getNewVersion() + ".jar"
-        );
+      instance.init(new DefaultLoadedApplication(this, applicationConfig, mainClass), loader);
+      if (instance.getUpdateRepository() != null) {
+        instance.getUpdateRepository().fetchOrigin();
+      }
+
+      this.loadedApplications.put(applicationConfig.getName(), instance);
+      System.out.println(TranslationHolder.translateDef("successfully-installed-app", applicationConfig.getName()));
+      return instance;
+    } catch (final ClassNotFoundException exception) {
+      System.err.println("Unable to find main class " + applicationConfig.getMainClassName() + " for application " + applicationConfig.getName());
+    } catch (final NoSuchMethodException exception) {
+      System.err.println("Unable to find NoArgsConstructor in class " + applicationConfig.getMainClassName() + " in application " + applicationConfig.getName());
+    } catch (final IOException | IllegalAccessException | InstantiationException | InvocationTargetException exception) {
+      exception.printStackTrace();
     }
+
+    return null;
+  }
+
+  private void disableApplication(@NotNull Application application) {
+    ApplicationDisableEvent event = new ApplicationDisableEvent(application.getApplication());
+    ExecutorAPI.getInstance().getServiceRegistry().getProviderUnchecked(EventManager.class).callEvent(event);
+    if (event.isCancelled()) {
+      return;
+    }
+
+    application.getApplication().setApplicationStatus(ApplicationStatus.PRE_DISABLE);
+    application.onPreDisable();
+    System.out.println(TranslationHolder.translateDef("successfully-pre-disabled-app", application.getApplication().getName()));
+
+    application.getApplication().setApplicationStatus(ApplicationStatus.DISABLED);
+    application.onDisable();
+
+    this.handleUpdate(application);
+
+    this.loadedApplications.remove(application.getApplication().getName());
+    application.getAppClassLoader().close();
+  }
+
+  private void handleUpdate(@NotNull Application application) {
+    // Do not fetch updates on development builds
+    if (System.getProperty("reformcloud.runner.specification").equals("SNAPSHOT")) {
+      return;
+    }
+
+    ApplicationUpdateRepository repository = application.getUpdateRepository();
+    if (repository == null || !repository.isNewVersionAvailable() || repository.getUpdate() == null) {
+      return;
+    }
+
+    IOUtils.createDirectory(Paths.get("reformcloud/.update/apps"));
+    String fileName = application.getApplication().getApplicationConfig().getApplicationPath().getFileName().toString();
+    String[] split = fileName.split("-");
+    String name = fileName.replace("-" + split[split.length - 1], "").replace(".jar", "");
+
+    System.out.println(TranslationHolder.translateDef(
+      "application-download-update",
+      application.getApplication().getApplicationConfig().getName(),
+      application.getApplication().getApplicationConfig().getVersion(),
+      repository.getUpdate().getNewVersion(),
+      repository.getName(),
+      repository.getUpdate().getDownloadUrl()
+    ));
+
+    DownloadHelper.download(
+      repository.getUpdate().getDownloadUrl(),
+      "reformcloud/.update/apps/" + name + "-" + repository.getUpdate().getNewVersion() + ".jar"
+    );
+  }
 }
