@@ -30,87 +30,88 @@ import systems.reformcloud.reformcloud2.executor.api.groups.template.Template;
 import systems.reformcloud.reformcloud2.executor.api.groups.template.backend.TemplateBackend;
 import systems.reformcloud.reformcloud2.executor.api.groups.template.builder.TemplateBuilder;
 import systems.reformcloud.reformcloud2.executor.api.task.Task;
-import systems.reformcloud.reformcloud2.executor.api.utility.list.Streams;
+import systems.reformcloud.reformcloud2.executor.api.utility.MoreCollections;
 import systems.reformcloud.reformcloud2.shared.io.IOUtils;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
 
 public class FileTemplateBackend implements TemplateBackend {
 
-    public static final String NAME = TemplateBuilder.FILE_BACKEND;
+  public static final String NAME = TemplateBuilder.FILE_BACKEND;
 
-    @Override
-    public boolean existsTemplate(@NotNull String group, @NotNull String template) {
-        return Files.exists(this.format(group, template));
+  @Override
+  public boolean existsTemplate(@NotNull String group, @NotNull String template) {
+    return Files.exists(this.format(group, template));
+  }
+
+  @Override
+  public void createTemplate(@NotNull String group, @NotNull String template) {
+    if (!this.existsTemplate(group, template)) {
+      IOUtils.createDirectory(Paths.get("reformcloud/templates", group, template, "plugins"));
+    }
+  }
+
+  @NotNull
+  @Override
+  public Task<Void> loadTemplate(@NotNull String group, @NotNull String template, @NotNull Path target) {
+    if (!this.existsTemplate(group, template)) {
+      this.createTemplate(group, template);
+      return Task.completedTask(null);
     }
 
-    @Override
-    public void createTemplate(@NotNull String group, @NotNull String template) {
-        if (!this.existsTemplate(group, template)) {
-            IOUtils.createDirectory(Path.of("reformcloud/templates", group, template, "plugins"));
-        }
+    IOUtils.copyDirectory(this.format(group, template), target);
+    return Task.completedTask(null);
+  }
+
+  @NotNull
+  @Override
+  public Task<Void> loadGlobalTemplates(@NotNull ProcessGroup group, @NotNull Path target) {
+    MoreCollections.allOf(group.getTemplates(), Template::isGlobal).forEach(e -> this.loadTemplate(group.getName(), e.getName(), target));
+    return Task.completedTask(null);
+  }
+
+  @NotNull
+  @Override
+  public Task<Void> loadPath(@NotNull String path, @NotNull Path target) {
+    Path localPath = Paths.get(path);
+    if (Files.notExists(localPath)) {
+      IOUtils.createDirectory(localPath);
+      return Task.completedTask(null);
     }
 
-    @NotNull
-    @Override
-    public Task<Void> loadTemplate(@NotNull String group, @NotNull String template, @NotNull Path target) {
-        if (!this.existsTemplate(group, template)) {
-            this.createTemplate(group, template);
-            return Task.completedTask(null);
-        }
-
-        IOUtils.copyDirectory(this.format(group, template), target);
-        return Task.completedTask(null);
+    if (Files.isDirectory(localPath)) {
+      IOUtils.copyDirectory(localPath, target);
     }
 
-    @NotNull
-    @Override
-    public Task<Void> loadGlobalTemplates(@NotNull ProcessGroup group, @NotNull Path target) {
-        Streams.allOf(group.getTemplates(), Template::isGlobal).forEach(e -> this.loadTemplate(group.getName(), e.getName(), target));
-        return Task.completedTask(null);
+    return Task.completedTask(null);
+  }
+
+  @Override
+  public void deployTemplate(@NotNull String group, @NotNull String template, @NotNull Path current, @NotNull Collection<String> collection) {
+    if (this.existsTemplate(group, template)) {
+      IOUtils.copyDirectory(current, this.format(group, template), collection);
+    }
+  }
+
+  @Override
+  public void deleteTemplate(@NotNull String group, @NotNull String template) {
+    if (!this.existsTemplate(group, template)) {
+      return;
     }
 
-    @NotNull
-    @Override
-    public Task<Void> loadPath(@NotNull String path, @NotNull Path target) {
-        Path localPath = Path.of(path);
-        if (Files.notExists(localPath)) {
-            IOUtils.createDirectory(localPath);
-            return Task.completedTask(null);
-        }
+    IOUtils.deleteDirectory(this.format(group, template));
+  }
 
-        if (Files.isDirectory(localPath)) {
-            IOUtils.copyDirectory(localPath, target);
-        }
+  @NotNull
+  @Override
+  public String getName() {
+    return NAME;
+  }
 
-        return Task.completedTask(null);
-    }
-
-    @Override
-    public void deployTemplate(@NotNull String group, @NotNull String template, @NotNull Path current, @NotNull Collection<String> collection) {
-        if (this.existsTemplate(group, template)) {
-            IOUtils.copyDirectory(current, this.format(group, template), collection);
-        }
-    }
-
-    @Override
-    public void deleteTemplate(@NotNull String group, @NotNull String template) {
-        if (!this.existsTemplate(group, template)) {
-            return;
-        }
-
-        IOUtils.deleteDirectory(this.format(group, template));
-    }
-
-    @NotNull
-    @Override
-    public String getName() {
-        return NAME;
-    }
-
-    private Path format(String group, String template) {
-        return Path.of("reformcloud/templates/" + group + "/" + template);
-    }
+  private Path format(String group, String template) {
+    return Paths.get("reformcloud/templates/" + group + "/" + template);
+  }
 }
