@@ -36,6 +36,7 @@ import java.nio.file.DirectoryStream;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -48,221 +49,221 @@ import java.util.zip.ZipInputStream;
 @ApiStatus.Internal
 public final class IOUtils {
 
-    private IOUtils() {
-        throw new UnsupportedOperationException();
-    }
+  private IOUtils() {
+    throw new UnsupportedOperationException();
+  }
 
-    public static void deleteFile(String path) {
-        deleteFile(Path.of(path));
-    }
+  public static void deleteFile(String path) {
+    deleteFile(Paths.get(path));
+  }
 
-    public static void deleteFile(Path file) {
+  public static void deleteFile(Path file) {
+    try {
+      Files.deleteIfExists(file);
+    } catch (final IOException ex) {
+      ex.printStackTrace();
+    }
+  }
+
+  public static void createFile(Path path) {
+    if (Files.notExists(path)) {
+      Path parent = path.getParent();
+      if (parent != null && Files.notExists(parent)) {
         try {
-            Files.deleteIfExists(file);
+          Files.createDirectories(parent);
+          Files.createFile(path);
         } catch (final IOException ex) {
-            ex.printStackTrace();
+          ex.printStackTrace();
         }
+      }
+    }
+  }
+
+  public static void rename(Path file, String newName) {
+    try {
+      Files.move(file, file.resolveSibling(newName));
+    } catch (IOException exception) {
+      exception.printStackTrace();
+    }
+  }
+
+  public static void createDirectory(@Nullable Path path) {
+    if (path == null) {
+      return;
     }
 
-    public static void createFile(Path path) {
-        if (Files.notExists(path)) {
-            Path parent = path.getParent();
-            if (parent != null && Files.notExists(parent)) {
-                try {
-                    Files.createDirectories(parent);
-                    Files.createFile(path);
-                } catch (final IOException ex) {
-                    ex.printStackTrace();
-                }
-            }
-        }
+    try {
+      Files.createDirectories(path);
+    } catch (final IOException ex) {
+      ex.printStackTrace();
     }
+  }
 
-    public static void rename(Path file, String newName) {
-        try {
-            Files.move(file, file.resolveSibling(newName));
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
+  public static void doCopy(String from, Path target) {
+    try (InputStream inputStream = Files.newInputStream(Paths.get(from))) {
+      doCopy(inputStream, target, StandardCopyOption.REPLACE_EXISTING);
+    } catch (IOException exception) {
+      exception.printStackTrace();
     }
+  }
 
-    public static void createDirectory(@Nullable Path path) {
-        if (path == null) {
-            return;
+  public static void deleteAllFilesInDirectory(Path dirPath) {
+    try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(dirPath)) {
+      for (Path path : directoryStream) {
+        if (!Files.isDirectory(path)) {
+          deleteFile(path);
         }
-
-        try {
-            Files.createDirectories(path);
-        } catch (final IOException ex) {
-            ex.printStackTrace();
-        }
+      }
+    } catch (IOException exception) {
+      exception.printStackTrace();
     }
+  }
 
-    public static void doCopy(String from, Path target) {
-        try (InputStream inputStream = Files.newInputStream(Path.of(from))) {
-            doCopy(inputStream, target, StandardCopyOption.REPLACE_EXISTING);
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
+  public static void deleteDirectory(Path dirPath) {
+    try {
+      doDeleteDirectory(dirPath);
+    } catch (IOException exception) {
+      exception.printStackTrace();
     }
+  }
 
-    public static void deleteAllFilesInDirectory(Path dirPath) {
-        try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(dirPath)) {
-            for (Path path : directoryStream) {
-                if (!Files.isDirectory(path)) {
-                    deleteFile(path);
-                }
-            }
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
+  public static void deleteDirectorySilently(Path dirPath) {
+    try {
+      doDeleteDirectory(dirPath);
+    } catch (IOException ignored) {
     }
+  }
 
-    public static void deleteDirectory(Path dirPath) {
-        try {
-            doDeleteDirectory(dirPath);
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
+  private static void doDeleteDirectory(Path dirPath) throws IOException {
+    Collection<IOException> exceptions = new ArrayList<>();
+    deleteDirectoryChecked(dirPath, exceptions);
+
+    if (!exceptions.isEmpty()) {
+      throw new IOException("Caught " + exceptions.size() + " exceptions: " + exceptions.stream().map(IOException::getMessage).collect(Collectors.joining(", ")));
     }
+  }
 
-    public static void deleteDirectorySilently(Path dirPath) {
-        try {
-            doDeleteDirectory(dirPath);
-        } catch (IOException ignored) {
-        }
-    }
-
-    private static void doDeleteDirectory(Path dirPath) throws IOException {
-        Collection<IOException> exceptions = new ArrayList<>();
-        deleteDirectoryChecked(dirPath, exceptions);
-
-        if (!exceptions.isEmpty()) {
-            throw new IOException("Caught " + exceptions.size() + " exceptions: " + exceptions.stream().map(IOException::getMessage).collect(Collectors.joining(", ")));
-        }
-    }
-
-    private static void deleteDirectoryChecked(Path dir, Collection<IOException> exceptions) {
-        try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(dir)) {
-            for (Path path : directoryStream) {
-                if (Files.isDirectory(path)) {
-                    deleteDirectoryChecked(path, exceptions);
-                } else {
-                    try {
-                        Files.delete(path);
-                    } catch (IOException exception) {
-                        exceptions.add(exception);
-                    }
-                }
-            }
-        } catch (IOException exception) {
+  private static void deleteDirectoryChecked(Path dir, Collection<IOException> exceptions) {
+    try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(dir)) {
+      for (Path path : directoryStream) {
+        if (Files.isDirectory(path)) {
+          deleteDirectoryChecked(path, exceptions);
+        } else {
+          try {
+            Files.delete(path);
+          } catch (IOException exception) {
             exceptions.add(exception);
+          }
         }
-
-        try {
-            Files.delete(dir);
-        } catch (IOException exception) {
-            exceptions.add(exception);
-        }
+      }
+    } catch (IOException exception) {
+      exceptions.add(exception);
     }
 
-    public static void recreateDirectory(Path path) {
-        if (Files.exists(path)) {
-            if (path.toFile().isDirectory()) {
-                deleteDirectory(path);
-            } else {
-                deleteFile(path);
+    try {
+      Files.delete(dir);
+    } catch (IOException exception) {
+      exceptions.add(exception);
+    }
+  }
+
+  public static void recreateDirectory(Path path) {
+    if (Files.exists(path)) {
+      if (path.toFile().isDirectory()) {
+        deleteDirectory(path);
+      } else {
+        deleteFile(path);
+      }
+    }
+
+    createDirectory(path);
+  }
+
+  public static void doInternalCopy(ClassLoader classLoader, String file, String target) {
+    if (Files.exists(Paths.get(target))) {
+      return;
+    }
+
+    try (InputStream inputStream = classLoader.getResourceAsStream(file)) {
+      doCopy(inputStream, Paths.get(target));
+    } catch (final IOException ex) {
+      ex.printStackTrace();
+    }
+  }
+
+  public static void doOverrideInternalCopy(ClassLoader classLoader, String file, String target) {
+    deleteFile(Paths.get(target));
+    try (InputStream inputStream = classLoader.getResourceAsStream(file)) {
+      doCopy(inputStream, Paths.get(target));
+    } catch (final IOException ex) {
+      ex.printStackTrace();
+    }
+  }
+
+  public static void copyDirectory(Path path, Path target) {
+    copyDirectory(path, target, new ArrayList<>());
+  }
+
+  public static void copyDirectory(Path path, Path target, Collection<String> excludedFiles) {
+    try {
+      Files.walkFileTree(path, new SimpleFileVisitor<Path>() {
+        @Override
+        public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+          if (excludedFiles.stream().anyMatch(e -> e.equals(file.toFile().getName()))) {
+            return FileVisitResult.CONTINUE;
+          }
+
+          Path targetFile = Paths.get(target.toString(), path.relativize(file).toString());
+          Path parent = targetFile.getParent();
+
+          if (parent != null && Files.notExists(parent)) {
+            Files.createDirectories(parent);
+          }
+
+          Files.copy(file, targetFile, StandardCopyOption.REPLACE_EXISTING);
+          return FileVisitResult.CONTINUE;
+        }
+      });
+    } catch (final IOException ex) {
+      ex.printStackTrace();
+    }
+  }
+
+  static void doCopy(InputStream inputStream, Path path, CopyOption... options) {
+    try {
+      Files.copy(inputStream, path, options);
+    } catch (final IOException ex) {
+      ex.printStackTrace();
+    }
+  }
+
+  public static void unZip(Path zippedPath, Path destinationPath) {
+    if (Files.notExists(destinationPath)) {
+      createDirectory(destinationPath);
+    } else if (!Files.isDirectory(destinationPath)) {
+      throw new UnsupportedOperationException("Cannot unzip to non-directory target");
+    }
+
+    byte[] buffer = new byte[8191];
+    try (ZipInputStream zipInputStream = new ZipInputStream(Files.newInputStream(zippedPath), StandardCharsets.UTF_8)) {
+      ZipEntry zipEntry;
+      while ((zipEntry = zipInputStream.getNextEntry()) != null) {
+        Path target = destinationPath.resolve(zipEntry.getName());
+        if (zipEntry.isDirectory()) {
+          createDirectory(target);
+        } else {
+          try (OutputStream outputStream = Files.newOutputStream(target)) {
+            int length;
+            while ((length = zipInputStream.read(buffer)) != -1) {
+              outputStream.write(buffer, 0, length);
             }
+          }
         }
 
-        createDirectory(path);
+        zipInputStream.closeEntry();
+      }
+    } catch (IOException exception) {
+      exception.printStackTrace();
     }
-
-    public static void doInternalCopy(ClassLoader classLoader, String file, String target) {
-        if (Files.exists(Path.of(target))) {
-            return;
-        }
-
-        try (InputStream inputStream = classLoader.getResourceAsStream(file)) {
-            doCopy(inputStream, Path.of(target));
-        } catch (final IOException ex) {
-            ex.printStackTrace();
-        }
-    }
-
-    public static void doOverrideInternalCopy(ClassLoader classLoader, String file, String target) {
-        deleteFile(Path.of(target));
-        try (InputStream inputStream = classLoader.getResourceAsStream(file)) {
-            doCopy(inputStream, Path.of(target));
-        } catch (final IOException ex) {
-            ex.printStackTrace();
-        }
-    }
-
-    public static void copyDirectory(Path path, Path target) {
-        copyDirectory(path, target, new ArrayList<>());
-    }
-
-    public static void copyDirectory(Path path, Path target, Collection<String> excludedFiles) {
-        try {
-            Files.walkFileTree(path, new SimpleFileVisitor<>() {
-                @Override
-                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                    if (excludedFiles.stream().anyMatch(e -> e.equals(file.toFile().getName()))) {
-                        return FileVisitResult.CONTINUE;
-                    }
-
-                    Path targetFile = Path.of(target.toString(), path.relativize(file).toString());
-                    Path parent = targetFile.getParent();
-
-                    if (parent != null && Files.notExists(parent)) {
-                        Files.createDirectories(parent);
-                    }
-
-                    Files.copy(file, targetFile, StandardCopyOption.REPLACE_EXISTING);
-                    return FileVisitResult.CONTINUE;
-                }
-            });
-        } catch (final IOException ex) {
-            ex.printStackTrace();
-        }
-    }
-
-    static void doCopy(InputStream inputStream, Path path, CopyOption... options) {
-        try {
-            Files.copy(inputStream, path, options);
-        } catch (final IOException ex) {
-            ex.printStackTrace();
-        }
-    }
-
-    public static void unZip(Path zippedPath, Path destinationPath) {
-        if (Files.notExists(destinationPath)) {
-            createDirectory(destinationPath);
-        } else if (!Files.isDirectory(destinationPath)) {
-            throw new UnsupportedOperationException("Cannot unzip to non-directory target");
-        }
-
-        byte[] buffer = new byte[8191];
-        try (ZipInputStream zipInputStream = new ZipInputStream(Files.newInputStream(zippedPath), StandardCharsets.UTF_8)) {
-            ZipEntry zipEntry;
-            while ((zipEntry = zipInputStream.getNextEntry()) != null) {
-                Path target = destinationPath.resolve(zipEntry.getName());
-                if (zipEntry.isDirectory()) {
-                    createDirectory(target);
-                } else {
-                    try (OutputStream outputStream = Files.newOutputStream(target)) {
-                        int length;
-                        while ((length = zipInputStream.read(buffer)) != -1) {
-                            outputStream.write(buffer, 0, length);
-                        }
-                    }
-                }
-
-                zipInputStream.closeEntry();
-            }
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
-    }
+  }
 }
